--- a/client/src/pages/Resume/Resume.css
+++ b/client/src/pages/Resume/Resume.css
@@ -80,7 +80,7 @@
     height:0px;
     transition:1s;
     overflow:hidden;
-    animation:grow 1s 2s forwards;
+    animation:grow 2s forwards;
 }
 
 @keyframes grow{
@@ -120,7 +120,8 @@
     height:3px;
     background:green;
     top:30%;
-    left:25%
+    left:25%;
+    animation:request forwards 2s;
 }
 
 
@@ -130,6 +131,8 @@
     background:red;
     left:65%;
     top:40%;
+    animation:request  forwards 2s;
+
 }
 
 .linethree{
@@ -138,7 +141,23 @@
     background:blue;
     left:25%;
     top:50%;
+    animation:request  forwards 2s;
+
 }
+
+
+@keyframes request {
+    0%{
+        width:0%;
+        opacity:1;
+    };
+    100%{
+        height:3px;
+        width:100%;
+        opacity:1;
+    }
+}
+
 
 .requestDiv{
     height:10px;
