messagboard is about done, need to make dynamic routes based on topic title

--- a/client/src/pages/Grocery/Grocery.css
+++ b/client/src/pages/Grocery/Grocery.css
@@ -321,6 +321,18 @@
         width:100%;
         grid-template-columns:repeat(1,1fr)
     }
+
+    .canvasTextOne{
+        font-size:35px;
+    }
+
+    .canvasTextTwo{
+        font-size:25px;
+    }
+
+    .h5Two{
+        left:30%;
+    }
 }
 
 
