--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -51,3 +51,15 @@
 }
 
 
+@media screen and (max-width:550px){
+    .navh3{
+        display:none;
+    }
+    
+
+    .weatherContainer{
+        left:15px
+    }
+}
+
+
